<resources>
    <string name="app_name">Interestr</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="network_error">Network error. Make sure that you are connected to the internet.</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="a_mistake">A mistake?</string>
    <string name="search">Search</string>
    <string name="short_text">Short Text</string>
    <string name="check_box">Check Box</string>
    <string name="long_text">Long Text</string>
    <string name="email">Email</string>
    <string name="numeric">Numeric</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="choice_name">Choice Name</string>
    <string name="done">Done</string>
    <string name="removed_item">Removed item</string>
    <string name="save">Save</string>
    <string name="make_hidden">Make Hidden</string>
    <string name="group_name">Group Name</string>
    <string name="groups">Groups</string>
    <string name="report">Report</string>
    <string name="user_reported">User reported.</string>
    <string name="template_name">Template Name</string>
    <string name="profile">Profile</string>
    <string name="group_description">Group Description</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="url">Url</string>
    <string name="telephone">Telephone</string>
    <string name="select">Dropdown</string>
    <string name="posts">Posts</string>
    <string name="data_template_saved">Data Template Saved</string>
    <string name="post_saved">Post Saved</string>
    <string name="add_new_template">Add New Template</string>
    <string name="actions">Actions...</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="add_image_for_group">Add Image For Group</string>
    <string name="group_image">Group Image</string>
    <string name="multiple_choice_item">Multiple Choice Item</string>
    <string name="remove">Remove</string>
    <string name="add_choice">Add Choice</string>
    <string name="join">Join</string>
    <string name="more">More...</string>
    <string name="members">Members:</string>
    <string name="comments">Comments</string>
    <string name="follow">Follow</string>
    <string name="followers">Followers:</string>
    <string name="following">Following:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_lowercase">user</string>
    <string name="group_lowercase">group</string>
    <string name="log_out">Log out</string>
    <string name="leave">Leave</string>

</resources>
