<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/action_add_checkbox"
            android:title="@string/check_box"
            android:icon="@drawable/ic_check_box_black_24dp"
            android:orderInCategory="10"
            />
        <item
            android:id="@+id/action_add_text"
            android:title="@string/short_text"
            android:icon="@drawable/ic_short_text_black_24dp"
            android:orderInCategory="20"
            />
        <item
            android:id="@+id/action_add_textarea"
            android:title="@string/long_text"
            android:icon="@drawable/ic_long_text_black_24dp"
            android:orderInCategory="30"
            />
    </group>
    <group>
        <item
            android:id="@+id/action_add_number"
            android:title="@string/numeric"
            android:icon="@drawable/ic_numeric_black_24dp"
            android:orderInCategory="40" />
        <item
            android:id="@+id/action_add_email"
            android:title="@string/email"
            android:icon="@drawable/ic_email_black_24dp"
            android:orderInCategory="50"
            />
        <item
            android:id="@+id/action_add_url"
            android:title="@string/url"
            android:orderInCategory="60"
            />
        <item
            android:id="@+id/action_add_telephone"
            android:title="@string/telephone"
            android:orderInCategory="70"
            />
    </group>
    <group>
        <item
            android:id="@+id/action_add_date"
            android:title="@string/date"
            android:orderInCategory="80"
            />
        <item
            android:id="@+id/action_add_select"
            android:title="@string/select"
            android:orderInCategory="90"
            />
        <item
            android:id="@+id/action_add_multisel"
            android:title="@string/multiple_choice"
            android:icon="@drawable/ic_list_black_24dp"
            android:orderInCategory="100"
            />
    </group>

</menu>